--- a/Librarys/PhotoViewlibrary/build.gradle
+++ b/Librarys/PhotoViewlibrary/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'android-library'
 
 dependencies {
 //    compile fileTree(dir: 'libs', include: '*.jar')
+    compile files(':Jars/support/android-support-v4.jar')
 }
 
 android {
